--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
               <option value="generic">Generic Build Info</option>
             </select>
       </div>
+      <!--
       <div class="control ">
         <div class="control-icon">
           <i class="material-icons">&#xE164;</i>
@@ -73,7 +74,7 @@
               <option value="title" selected>Title Sort</option>
               <option value="category">Category Sort</option>
             </select>
-      </div>
+      </div> -->
       <div class="resultCountWrapper ">
         <span id="resultCount"></span>
       </div>
