more mobile friendly, removed article count - who cares

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lifted Subaru</title>
 </head>
 
 <body>
@@ -75,12 +77,6 @@
               <option value="category">Category Sort</option>
             </select>
       </div> -->
-      <div class="resultCountWrapper ">
-        <span id="resultCount"></span>
-      </div>
-
-
-
     </div>
     </div>
     <div class="grid"></div>
