--- a/detail-page/title-with-spaces-and-shits1.html
+++ b/detail-page/title-with-spaces-and-shits1.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="./styles/styles.css" type="text/css">
   <link rel="stylesheet" href="http://liftedsubarus.com.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" type="text/css">
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="./index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -47,53 +47,16 @@
     <button class="accordionClose accordion-action">X</button>
   </div>
 
-    <section class="grid-mGrid">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
-      <div class="controls cf">
-        <div class="control search">
-          <div class="control-icon">
-            <i class="material-icons">&#xE8B6;</i>
-          </div>
-          <input id="searchBar" class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
-        </div>
-        <div class="control filter">
-          <div class="control-icon">
-            <i class="material-icons">&#xE152;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field filter-field form-control">
-            <!--TODO this needs to be created by handlebars-->
-                <option value="" selected>All Types</option>
-                <option value="EA81">EA81</option>
-                <option value="EA82">EA82</option>
-                <option value="EJ22">EJ22</option>
-                <option value="EJ25">EJ25</option>
-                <option value="EJ15">EJ15</option>
-                <option value="generic build">Generic Build Info</option>
-              </select>
-        </div>
-      </div>
-      </div>
-      <div class="grid">
-        <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and shit&#x27;s" data-title="title with spaces and shit&#x27;sassssadasdasdasddadsd">
-            <a href="./detail-page/title-with-spaces-and-shitsassssadasdasdasddadsd.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">title with spaces and shit&#x27;sassssadasdasdasddadsd</div>
-                <div class="card-description" style="color:#3d3d3d">title with spaces and shit&#x27;s</div>
-                </div>
-              </div>
-            </a>
-          </div>
 
-      </div>
-      <div id="noResults"></div>
+    <section class="details">
+        <h1 class="details-headline">title with spaces and shit&#x27;s1</h1>
+        <p class="details-author">by test</p>
+        <a href="https://www.google.com1" class="btn grey-background">Link</a>
+        <a href="/static/pdf1" class="btn grey-background">PDF Archive</a>
+        <div class="details-content">
+          <p> stuff stuff stuff</p>1
+        </div>
     </section>
-
-
 
   <footer>
     <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
@@ -112,8 +75,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="./scripts/script.js"></script>
+  <script src="./scripts/accordion.js"></script>
 
 </body>
 
