--- a/list.html
+++ b/list.html
@@ -47,53 +47,30 @@
     <button class="accordionClose accordion-action">X</button>
   </div>
 
-    <section class="grid-mGrid">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
-      <div class="controls cf">
-        <div class="control search">
-          <div class="control-icon">
-            <i class="material-icons">&#xE8B6;</i>
-          </div>
-          <input id="searchBar" class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
-        </div>
-        <div class="control filter">
-          <div class="control-icon">
-            <i class="material-icons">&#xE152;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field filter-field form-control">
-            <!--TODO this needs to be created by handlebars-->
-                <option value="" selected>All Types</option>
-                <option value="EA81">EA81</option>
-                <option value="EA82">EA82</option>
-                <option value="EJ22">EJ22</option>
-                <option value="EJ25">EJ25</option>
-                <option value="EJ15">EJ15</option>
-                <option value="generic build">Generic Build Info</option>
-              </select>
-        </div>
-      </div>
-      </div>
-      <div class="grid">
-        <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and shit&#x27;s" data-title="title with spaces and shit&#x27;sassssadasdasdasddadsd">
-            <a href="./detail-page/title-with-spaces-and-shitsassssadasdasdasddadsd.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">title with spaces and shit&#x27;sassssadasdasdasddadsd</div>
-                <div class="card-description" style="color:#3d3d3d">title with spaces and shit&#x27;s</div>
-                </div>
-              </div>
+
+
+    <section class="list">
+      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/index.html'>View as Grid</a>
+      <table id="listView">
+      <tr>
+        <th>TITLE</th>
+        <th>AUTHOR</th>
+        <th>URL</th>
+        <th>Archive</th>
+      </tr>
+      <tr>
+        <td>title with spaces and shit&#x27;sassssadasdasdasddadsd</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
             </a>
-          </div>
+      </td>
+        <td> <a href="https://www.google.com" class="btn grey-background">Link</a></td>
+        <td>  <a href="/static/pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
 
-      </div>
-      <div id="noResults"></div>
+      </table>
     </section>
-
-
 
   <footer>
     <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
