--- a/mockup/index.html
+++ b/mockup/index.html
@@ -13,87 +13,73 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="../styles/styles.css" type="text/css">
   <link rel="stylesheet" href="http://liftedsubarus.com.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" type="text/css">
   <!-- FAVICON -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
-
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="./index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
-  <div id="accordionWrapper">
-    <button class="accordion accordion-action">ABOUT</button>
-  </div>
+    <div id="accordionWrapper">
+      <button class="accordion accordion-action">ABOUT</button>
+    </div>
   <div id="about">
     <p>In 2017 I bought my first Subaru: a worn-out $440 1987 Subaru DL wagon for the <a href="https://gambler500.com/">OG Oregon Gambler 500</a>. Two weeks later photobucket <a href="https://medium.com/@AxelApp/how-photobucket-broke-the-internet-and-why-you-should-care-4a244bda6b7e">broke the internet</a>, and most of the threads I was relying on to modify the car.</p>
-    <p>My goal is not to replace <a href="http://www.ultimatesubaru.org/forum">USMB</a>, <a href="https://forums.nasioc.com/">NASIOC</a>, or any other messaging board, but to self host as much content as possible to ensure it doesn't go away again in the future.</p>
+
+    My goal is not to replace <a href="http://www.ultimatesubaru.org/forum">USMB</a>, <a href="https://forums.nasioc.com/">NASIOC</a>, or any other messaging board, but to self host as much content as possible to ensure it doesn't go away again in the future.
+
     <p>This is where you come in. Working on a write-up? Awesome. Post it to your favorite messaging board, and send me it. Lets make sure these writeups don't disappear in the future. Don't own content and just want me to link to it here? cool. Email me your list of your favorite build threads. The focus is on subaru builds, but generic build info like bumpers, tire carriers, fender folding techniques are all welcome.</p>
   </br>
+
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="./static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" src="../static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
   </div>
 
-    <section class="grid-mGrid">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
-      <div class="controls cf">
-        <div class="control search">
-          <div class="control-icon">
-            <i class="material-icons">&#xE8B6;</i>
-          </div>
-          <input id="searchBar" class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
+  <section class="grid-demo">
+    <div class="controls cf">
+      <div class="control search">
+        <div class="control-icon">
+          <i class="material-icons">&#xE8B6;</i>
         </div>
-        <div class="control filter">
-          <div class="control-icon">
-            <i class="material-icons">&#xE152;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field filter-field form-control">
-            <!--TODO this needs to be created by handlebars-->
-                <option value="" selected>All Types</option>
-                <option value="EA81">EA81</option>
-                <option value="EA82">EA82</option>
-                <option value="EJ22">EJ22</option>
-                <option value="EJ25">EJ25</option>
-                <option value="EJ15">EJ15</option>
-                <option value="generic build">Generic Build Info</option>
-              </select>
+        <input id="searchBar" class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
+      </div>
+      <div class="control filter">
+        <div class="control-icon">
+          <i class="material-icons">&#xE152;</i>
         </div>
+        <div class="select-arrow">
+          <i class="material-icons">&#xE313;</i>
+        </div>
+        <select class="control-field filter-field form-control">
+          <!--TODO this needs to be created by handlebars-->
+              <option value="" selected>All Types</option>
+              <option value="EA81">EA81</option>
+              <option value="EA82">EA82</option>
+              <option value="EJ22">EJ22</option>
+              <option value="EJ25">EJ25</option>
+              <option value="EJ15">EJ15</option>
+              <option value="generic build">Generic Build Info</option>
+            </select>
       </div>
-      </div>
-      <div class="grid">
-        <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and shit&#x27;s" data-title="title with spaces and shit&#x27;sassssadasdasdasddadsd">
-            <a href="./detail-page/title-with-spaces-and-shitsassssadasdasdasddadsd.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">title with spaces and shit&#x27;sassssadasdasdasddadsd</div>
-                <div class="card-description" style="color:#3d3d3d">title with spaces and shit&#x27;s</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-      </div>
-      <div id="noResults"></div>
-    </section>
-
-
+    </div>
+    </div>
+    <div class="grid"></div>
+    <div id="noResults"></div>
+  </section>
 
   <footer>
     <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
@@ -111,10 +97,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-  <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
-
+  <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.min.js"></script>
+  <script src="../scripts/script.js"></script>
+  <script src="../scripts/accordion.js"></script>
 </body>
 
 </html>
