--- a/detail-page/title-with-spaces-and-things.html
+++ b/detail-page/title-with-spaces-and-things.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="./styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
   <link rel="stylesheet" href="http://liftedsubarus.com.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" type="text/css">
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="./index.html">
+  <a href="https://liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -49,14 +49,15 @@
 
 
     <section class="details">
-        <h1 class="details-headline">title with spaces and shit&#x27;s1</h1>
-        <p class="details-author">by test</p>
-        <a href="https://www.google.com1" class="btn grey-background">Link</a>
-        <a href="/static/pdf1" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">title with spaces and thing&#x27;s</h1>
+        <p class="details-author">by Loyale 2.7 Turbo</p>
+        <a href="https://www.google.com" class="btn grey-background">Link</a>
+        <a href="/static/pdf" class="btn grey-background">PDF Archive</a>
         <div class="details-content">
-          <p> stuff stuff stuff</p>1
+          <p> stuff stuff stuff</p>
         </div>
     </section>
+
 
   <footer>
     <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
@@ -75,8 +76,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/accordion.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
