--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
   <link rel="stylesheet" href="http://liftedsubarus.com.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" type="text/css">
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="https://liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -48,7 +48,7 @@
   </div>
 
     <section class="grid-mGrid">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
+      <a style="float:right;" href='https://liftedsubaru.github.io/list.html'>View as List</a>
       <div class="controls cf">
         <div class="control search">
           <div class="control-icon">
@@ -78,12 +78,12 @@
       </div>
       <div class="grid">
         <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and shit&#x27;s" data-title="title with spaces and shit&#x27;sassssadasdasdasddadsd">
-            <a href="./detail-page/title-with-spaces-and-shitsassssadasdasdasddadsd.html"> <div class="item-content">
+          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and thing&#x27;s" data-title="title with spaces and thing&#x27;s">
+            <a href="./detail-page/title-with-spaces-and-things.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">title with spaces and shit&#x27;sassssadasdasdasddadsd</div>
-                <div class="card-description" style="color:#3d3d3d">title with spaces and shit&#x27;s</div>
+                <div class="card-title" style="color:#3d3d3d">title with spaces and thing&#x27;s</div>
+                <div class="card-description" style="color:#3d3d3d">title with spaces and thing&#x27;s</div>
                 </div>
               </div>
             </a>
@@ -112,8 +112,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
