--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
   <link rel="stylesheet" href="http://liftedsubarus.com.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" type="text/css">
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="https://liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -50,7 +50,7 @@
 
 
     <section class="list">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/index.html'>View as Grid</a>
+      <a style="float:right;" href='https://liftedsubaru.github.io/index.html'>View as Grid</a>
       <table id="listView">
       <tr>
         <th>TITLE</th>
@@ -59,7 +59,7 @@
         <th>Archive</th>
       </tr>
       <tr>
-        <td>title with spaces and shit&#x27;sassssadasdasdasddadsd</td>
+        <td>title with spaces and thing&#x27;s</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
         Loyale 2.7 Turbo
@@ -89,8 +89,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
