--- a/detail-page/end-wrench-ej22-overhaul.html
+++ b/detail-page/end-wrench-ej22-overhaul.html
@@ -49,12 +49,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">title with spaces and thing&#x27;s</h1>
-        <p class="details-author">by Loyale 2.7 Turbo</p>
-        <a href="https://www.google.com" class="btn grey-background">Link</a>
-        <a href="/static/pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">End Wrench: EJ22 Overhaul</h1>
+        <p class="details-author">by End Wrench</p>
+          <a href="https://liftedsubaru.github.io/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF Archive</a>
+
         <div class="details-content">
-          <p> stuff stuff stuff</p>
+            <img src="https://liftedsubaru.github.io/static/img/guides/soob22overhaul-min.png">
+          
         </div>
     </section>
 
