--- a/list.html
+++ b/list.html
@@ -59,14 +59,38 @@
         <th>Archive</th>
       </tr>
       <tr>
-        <td>title with spaces and thing&#x27;s</td>
+        <td>EA82 to Ej22 Swap Guide</td>
         <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
+            <a href="https://www.ultimatesubaru.org/forum/profile/1988-numbchux/">
+        numbchux
             </a>
       </td>
-        <td> <a href="https://www.google.com" class="btn grey-background">Link</a></td>
-        <td>  <a href="/static/pdf" class="btn grey-background">PDF</a>  </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>End Wrench: EJ22 Overhaul</td>
+        <td>
+        End Wrench
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>How To Keep Your Subaru Alive</td>
+        <td>
+        Larry Owens
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>DIY Head Porting</td>
+        <td>
+        Tech Staff, Standard Abrasives
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
 
       </table>
