--- a/detail-page/how-to-keep-your-subaru-alive.html
+++ b/detail-page/how-to-keep-your-subaru-alive.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="{{ROOTURL}}/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="{{ROOTURL}}/index.html">
+  <a href="https://liftedsubaru.github.io/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -47,103 +47,18 @@
     <button class="accordionClose accordion-action">X</button>
   </div>
 
-  {{#if home}}
-    <section class="grid-mGrid">
-      <a style="float:right;" href='{{ ROOTURL }}/list.html'>View as List</a>
-      <div class="controls cf">
-        <div class="control search">
-          <div class="control-icon">
-            <i class="material-icons">&#xE8B6;</i>
-          </div>
-          <input id="searchBar" class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
-        </div>
-        <div class="control filter">
-          <div class="control-icon">
-            <i class="material-icons">&#xE152;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field filter-field form-control">
-            <!--TODO this needs to be created by handlebars-->
-            <option value="" selected>All Types</option>
-            {{#each categories}}
-              <option value="{{category}}">{{category}}</option>
-            {{/each}}
-          </select>
-        </div>
-      </div>
-      </div>
-      <div class="grid">
-        <!-- Tiles! -->
-        {{#each detailPageConfigs}}
-          <div style="background:grey" class="item h2 w4" data-id="{{ id }}" data-category="{{category}}" data-description="{{ description }}" data-title="{{ title }}">
-            <a href="{{ url }}"> <div class="item-content">
-              <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">{{ category }}</div>
-                <div class="card-title" style="color:#3d3d3d">{{ title }}</div>
-                <div class="card-description" style="color:#3d3d3d">{{ description }}</div>
-                </div>
-              </div>
-            </a>
-          </div>
-        {{/each }}
 
-      </div>
-      <div id="noResults"></div>
-    </section>
-  {{/if}}
-
-  {{#if detailpage}}
     <section class="details">
-        <h1 class="details-headline">{{ title }}</h1>
-        <p class="details-author">by {{ author }}</p>
-        {{#if original_url}}
-          <a href="{{ original_url }}" class="btn grey-background">Link</a>
-        {{/if}}
-        {{#if archive_url}}
-          <a href="{{ROOTURL}}{{ archive_url }}" class="btn grey-background">PDF Archive</a>
-        {{/if}}
+        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
+        <p class="details-author">by Larry Owens</p>
+          <a href="https://liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-          {{#if img}}
-            <img src="{{ROOTURL}}{{img}}">
-          {{/if}}
-          {{{ content }}}
+            <img src="https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
+          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
         </div>
     </section>
-  {{/if}}
 
-  {{#if list}}
-    <section class="list">
-      <a style="float:right;" href='{{ ROOTURL }}/index.html'>View as Grid</a>
-      <table id="listView">
-      <tr>
-        <th>TITLE</th>
-        <th>AUTHOR</th>
-        <th>URL</th>
-        <th>Archive</th>
-      </tr>
-      {{#each detailPageConfigs}}
-      <tr>
-        <td>{{title}}</td>
-        <td>
-          {{#if author_link}}
-            <a href="{{author_link}}">
-          {{/if}}
-        {{author}}
-          {{#if author_link}}
-            </a>
-          {{/if}}
-      </td>
-        <td> {{#if original_url}}<a href="{{ original_url }}" class="btn grey-background">Link</a> {{/if}} </td>
-        <td> {{#if archive_url}} <a href="{{ archive_url }}" class="btn grey-background">PDF</a> {{/if}} </td>
-      </tr>
-      {{/each}}
-
-      </table>
-    </section>
-  {{/if}}
 
   <footer>
     <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
@@ -162,8 +77,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="{{ROOTURL}}/scripts/script.js"></script>
-  <script src="{{ROOTURL}}/scripts/accordion.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
+  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
 
 </body>
 
