--- a/index.html
+++ b/index.html
@@ -67,18 +67,51 @@
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
               <option value="EA82">EA82</option>
+              <option value="EJ22">EJ22</option>
+              <option value="EA82">EA82</option>
+              <option value="GENERIC BUILD">GENERIC BUILD</option>
           </select>
         </div>
       </div>
       </div>
       <div class="grid">
         <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and thing&#x27;s" data-title="title with spaces and thing&#x27;s">
-            <a href="./detail-page/title-with-spaces-and-things.html"> <div class="item-content">
+          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and thing&#x27;s" data-title="EA82 to Ej22 Swap Guide">
+            <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">title with spaces and thing&#x27;s</div>
+                <div class="card-title" style="color:#3d3d3d">EA82 to Ej22 Swap Guide</div>
                 <div class="card-description" style="color:#3d3d3d">title with spaces and thing&#x27;s</div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div style="background:grey" class="item h2 w4" data-id="1" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+            <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ej22</div>
+                <div class="card-title" style="color:#3d3d3d">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description" style="color:#3d3d3d"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div style="background:grey" class="item h2 w4" data-id="2" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+            <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
+                <div class="card-title" style="color:#3d3d3d">How To Keep Your Subaru Alive</div>
+                <div class="card-description" style="color:#3d3d3d">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div style="background:grey" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY Head Porting">
+            <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id" style="color:#3d3d3d;font-weight:600;">generic build</div>
+                <div class="card-title" style="color:#3d3d3d">DIY Head Porting</div>
+                <div class="card-description" style="color:#3d3d3d"></div>
                 </div>
               </div>
             </a>
