tiles/cards images, less inline styling

--- a/index.html
+++ b/index.html
@@ -75,42 +75,46 @@
       </div>
       <div class="grid">
         <!-- Tiles! -->
-          <div style="background:grey" class="item h2 w4" data-id="0" data-category="ea82" data-description="title with spaces and thing&#x27;s" data-title="EA82 to Ej22 Swap Guide">
+
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
             <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">EA82 to Ej22 Swap Guide</div>
-                <div class="card-description" style="color:#3d3d3d">title with spaces and thing&#x27;s</div>
+                <div class="card-title">EA82 to Ej22 Swap Guide</div>
+                <div class="card-description">Swap guide from Ultimatesubaru</div>
                 </div>
               </div>
             </a>
           </div>
-          <div style="background:grey" class="item h2 w4" data-id="1" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="1" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ej22</div>
-                <div class="card-title" style="color:#3d3d3d">End Wrench: EJ22 Overhaul</div>
-                <div class="card-description" style="color:#3d3d3d"></div>
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
-          <div style="background:grey" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY Head Porting">
+
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/porting-min.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">generic build</div>
-                <div class="card-title" style="color:#3d3d3d">DIY Head Porting</div>
-                <div class="card-description" style="color:#3d3d3d"></div>
+                <div class="card-title">DIY Head Porting</div>
+                <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
-          <div style="background:grey" class="item h2 w4" data-id="3" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
-                <div class="card-title" style="color:#3d3d3d">How To Keep Your Subaru Alive</div>
-                <div class="card-description" style="color:#3d3d3d">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                <div class="card-title">How To Keep Your Subaru Alive</div>
+                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
                 </div>
               </div>
             </a>
