suspension mod article

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
               <option value="EA82">EA82</option>
-              <option value="EJ22">EJ22</option>
               <option value="GENERIC BUILD">GENERIC BUILD</option>
+              <option value="EJ22">EJ22</option>
           </select>
         </div>
       </div>
@@ -87,11 +87,11 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="1" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
-            <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ej22</div>
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </div>
               </div>
@@ -109,7 +109,18 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="3" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+            <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ej22</div>
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
