--- a/list.html
+++ b/list.html
@@ -69,12 +69,14 @@
         <td>  <a href="/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>End Wrench: EJ22 Overhaul</td>
+        <td>Improved Shock Absorbers and Spring Coils On Loyales</td>
         <td>
-        End Wrench
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
       </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/106807-improved-shock-absorbers-and-spring-coils-on-loyales/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY Head Porting</td>
@@ -83,6 +85,14 @@
       </td>
         <td>  </td>
         <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>End Wrench: EJ22 Overhaul</td>
+        <td>
+        End Wrench
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>How To Keep Your Subaru Alive</td>
