--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ej22</div>
-                <div class="card-author">End Wrench</div>
+                <div class="card-author"></div>
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
                 </div>
