--- a/detail-page/diy-welded-differential.html
+++ b/detail-page/diy-welded-differential.html
@@ -54,7 +54,7 @@
           <a href="http://www.fourwheeler.com/how-to/transmission-drivetrain/154-1106-jeep-differential-welding-101/photo-01.html" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img src="/static/img/guides/weldedDiff.jpg">
+            <img src="/static/img/guides/weldedDiff.jpeg">
           <p>Get some beer, your favorite stick welder, some 6011 rod and hillbilly yourself a locked rear end.</p><p>Sure, we could argue about the practicality of a welded rear-end and how it affects the driving characteristics on the road, but who has the time? Those CVs won't bust themselves.</p>
         </div>
     </section>
