--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
+          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
             <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -100,24 +100,24 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="2" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
-            <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="2" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id">ej22</div>
-                <div class="card-author"></div>
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
-            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="3" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+            <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <div class="card-id">ej22</div>
+                <div class="card-author"></div>
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
                 </div>
               </div>
@@ -160,31 +160,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
-            <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Larry Owens</div>
-                <div class="card-title">How To Keep Your Subaru Alive</div>
-                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/weldedDiff.jpg');" class="item h2 w4" data-id="8" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
-            <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author"></div>
-                <div class="card-title">DIY: Welded Differential</div>
-                <div class="card-description"></div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
             <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -196,7 +172,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/weldedDiff.jpeg');" class="item h2 w4" data-id="8" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+            <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="9" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
             <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -208,7 +196,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides./JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+            <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Larry Owens</div>
+                <div class="card-title">How To Keep Your Subaru Alive</div>
+                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Weber Conversion">
             <a href="./detail-page/weber-conversion.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
