--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="4" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+            <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Fuel Injector Cleaning</div>
+                <div class="card-description">scrub a dub dub</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="5" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
                 <div class="card-author">Tech Staff</div>
                 <div class="card-title">DIY Head Porting</div>
                 <div class="card-description"></div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="title with spaces and thing&#x27;s" data-title="title with spaces and thing&#x27;s">
-            <a href="./detail-page/title-with-spaces-and-things.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">title with spaces and thing&#x27;s</div>
-                <div class="card-description">title with spaces and thing&#x27;s</div>
                 </div>
               </div>
             </a>
@@ -160,13 +160,13 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-            <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+            <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                <div class="card-author">Larry Owens</div>
+                <div class="card-title">How To Keep Your Subaru Alive</div>
+                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
                 </div>
               </div>
             </a>
@@ -184,25 +184,25 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="9" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+            <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
             <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
                 <div class="card-author"></div>
                 <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
                 <div class="card-description"></div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
-            <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Larry Owens</div>
-                <div class="card-title">How To Keep Your Subaru Alive</div>
-                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
                 </div>
               </div>
             </a>
