--- a/list.html
+++ b/list.html
@@ -95,15 +95,7 @@
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>DIY Head Porting</td>
-        <td>
-        Tech Staff
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>title with spaces and thing&#x27;s</td>
+        <td>Fuel Injector Cleaning</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
         Loyale 2.7 Turbo
@@ -111,6 +103,14 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>DIY Head Porting</td>
+        <td>
+        Tech Staff
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Ignition Module Testing</td>
@@ -123,14 +123,12 @@
         <td>  <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Cooler Thermoswitch</td>
+        <td>How To Keep Your Subaru Alive</td>
         <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
+        Larry Owens
       </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/123869-cooler-temp-thermoswitch/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf//static/pdf/cooler-temp-thermoswitch.pdf" class="btn grey-background">PDF</a>  </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY: Welded Differential</td>
@@ -141,20 +139,22 @@
         <td>  </td>
       </tr>
       <tr>
+        <td>Cooler Thermoswitch</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/123869-cooler-temp-thermoswitch/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf//static/pdf/cooler-temp-thermoswitch.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>DIY Fender Cutting &amp; Rolling</td>
         <td>
         
       </td>
         <td> <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>How To Keep Your Subaru Alive</td>
-        <td>
-        Larry Owens
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Weber Conversion</td>
