--- a/detail-page/fuel-injector-cleaning.html
+++ b/detail-page/fuel-injector-cleaning.html
@@ -49,7 +49,7 @@
 
 
     <section class="details">
-        <h1 class="details-headline">title with spaces and thing&#x27;s</h1>
+        <h1 class="details-headline">Fuel Injector Cleaning</h1>
          <p class="details-author">by Loyale 2.7 Turbo</p>
           <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>
           <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF Archive</a>
