more articles + fixes

--- a/detail-page/weber-conversion.html
+++ b/detail-page/weber-conversion.html
@@ -56,7 +56,7 @@
 
         <div class="details-content">
             <img src="/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif">
-          <p>The Weber 32/36 is the ubiquitous performance value-carbeurator on the market today. It's widely used on japanes vehicles and aircooled vws. You can find them easily second-hand.</p>
+          <p>The Weber 32/36 is the ubiquitous performance value-carbeurator on the market today. It's widely used on japanese vehicles and aircooled vws. You can find them easily second-hand.</p>
         </div>
     </section>
 
