favicon reference change

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
@@ -100,25 +100,25 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="2" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
-            <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Dashboard Removal</div>
-                <div class="card-description">&amp; LED retrofitting</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="3" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="2" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
             <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Loyale 2.7 Turbo</div>
                 <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="3" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+            <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Dashboard Removal</div>
+                <div class="card-description">&amp; LED retrofitting</div>
                 </div>
               </div>
             </a>
