--- a/detail-page/rear-e-brake-retrofit.html
+++ b/detail-page/rear-e-brake-retrofit.html
@@ -16,9 +16,9 @@
   <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
@@ -56,7 +56,7 @@
 
         <div class="details-content">
             <img src="/static/img/guides/DonorCar.jpg">
-          <p>This writeup is intended for the '84 ~ '94 Subaru GL / Loyale or EA82 Models which are the third gen of the Subaru Leone, however, you can retrofit the Rear disc brakes' system, from the EA82 lineup (third gen), to the EA81 lineup (second gen), and then, what he written here also will apply on the previous generation.</p>
+          <p>This writeup is intended for the '84 ~ '94 Subaru GL / Loyale or EA82 Models which are the third gen of the Subaru Leone, however, you can retrofit the Rear disc brakes' system, from the EA82 lineup (third gen), to the EA81 lineup (second gen).</p>
         </div>
     </section>
 
