--- a/detail-page/video-how-to-tune-a-cb-antennae.html
+++ b/detail-page/video-how-to-tune-a-cb-antennae.html
@@ -49,14 +49,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Dashboard Removal</h1>
-         <p class="details-author">by Loyale 2.7 Turbo</p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">VIDEO: How-To Tune a CB Antennae</h1>
+         <p class="details-author">by Bleepin Jeep</p>
+          <a href="https://www.youtube.com/watch?v&#x3D;0UsOmfVErO8" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img src="/static/img/guides/InstrumentClustersAnalog.jpg">
-          
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v&#x3D;0UsOmfVErO8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <p>If your CB radio doesnt have a built-in SWR meter, you'll do the same thing but with an external meter.</p>
         </div>
     </section>
 
