--- a/list.html
+++ b/list.html
@@ -67,6 +67,14 @@
         <td>  <a href="/static/pdf/techbillavistaRecovery.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Tube Bending 101</td>
+        <td>
+        Rob Park
+      </td>
+        <td> <a href="https://www.pirate4x4.com/tech/bendin_tube/index.html" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/bendin_tubeindex.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>DIY: Swing Away Bumper</td>
         <td>
             <a href="https://americanadventurist.com/forum/members/fozroamer.3034/">
@@ -77,14 +85,14 @@
         <td>  <a href="/static/pdf/subaru-forester-rear-front-bumper-build-pics.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Dashboard Removal</td>
+        <td>VIDEO: How-To Tune a CB Antennae</td>
         <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
+            <a href="https://www.youtube.com/channel/UCvlG_ZnHoZLPv0CVWOC0a1Q">
+        Bleepin Jeep
             </a>
       </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF</a>  </td>
+        <td> <a href="https://www.youtube.com/watch?v&#x3D;0UsOmfVErO8" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>EA82 to Ej22 Swap Guide</td>
@@ -97,14 +105,14 @@
         <td>  <a href="/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Rear e-Brake Retrofit </td>
+        <td>Dashboard Removal</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
         Loyale 2.7 Turbo
             </a>
       </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/129779-the-definitive-rear-e-brake-retrofit-solution/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/the-definitive-rear-e-brake-retrofit-solution.pdf" class="btn grey-background">PDF</a>  </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Improved Shock Absorbers and Spring Coils On Loyales</td>
@@ -115,6 +123,16 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/106807-improved-shock-absorbers-and-spring-coils-on-loyales/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Rear e-Brake Retrofit </td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/129779-the-definitive-rear-e-brake-retrofit-solution/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/the-definitive-rear-e-brake-retrofit-solution.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>End Wrench: EJ22 Overhaul</td>
@@ -187,6 +205,14 @@
         <td>  <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Chopsaw Tube Notching</td>
+        <td>
+        Marc Googer
+      </td>
+        <td> <a href="https://www.pirate4x4.com/tech/billavista/Links/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/techbillavistatubenotching.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Weber Conversion</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -211,6 +237,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. LiftedSubarus does not warrant the performance, effectiveness or applicability of any sites listed or linked to in any Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
+
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
