--- a/detail-page/chopsaw-tube-notching.html
+++ b/detail-page/chopsaw-tube-notching.html
@@ -49,14 +49,14 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Dashboard Removal</h1>
-         <p class="details-author">by Loyale 2.7 Turbo</p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/131336-led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/led-retrofitting-on-instrument-cluster-~-dashboard-removal-procedures.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Chopsaw Tube Notching</h1>
+         <p class="details-author">by Marc Googer</p>
+          <a href="https://www.pirate4x4.com/tech/billavista/Links/" class="btn grey-background">Link</a>
+          <a href="/static/pdf/techbillavistatubenotching.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img src="/static/img/guides/InstrumentClustersAnalog.jpg">
-          
+            <img src="/static/img/guides/notching.jpg">
+          <p></p>
         </div>
     </section>
 
