--- a/index.html
+++ b/index.html
@@ -88,7 +88,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+            <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Rob Park</div>
+                <div class="card-title">Tube Bending 101</div>
+                <div class="card-description">pirate4x4 tech</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
             <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -100,19 +112,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="2" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
-            <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
+          <div style="" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+            <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Dashboard Removal</div>
-                <div class="card-description">&amp; LED retrofitting</div>
+                <div class="card-id">generic build</div>
+                <div class="card-author">Bleepin Jeep</div>
+                <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
+                <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
             <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -124,19 +136,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="4" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
-            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+            <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Rear e-Brake Retrofit </div>
-                <div class="card-description"></div>
+                <div class="card-title">Dashboard Removal</div>
+                <div class="card-description">&amp; LED retrofitting</div>
                 </div>
               </div>
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="5" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
             <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -148,7 +160,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="6" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Rear e-Brake Retrofit </div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="8" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ej22</div>
@@ -160,7 +184,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="7" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="9" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
             <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -172,7 +196,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="8" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -184,7 +208,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Ignition Module Testing">
             <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -196,7 +220,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="12" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -208,7 +232,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/weldedDiff.jpeg');" class="item h2 w4" data-id="11" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/weldedDiff.jpeg');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
             <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -220,7 +244,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
             <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -232,7 +256,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
             <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -244,7 +268,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="14" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="16" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+            <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Marc Googer</div>
+                <div class="card-title">Chopsaw Tube Notching</div>
+                <div class="card-description">BillaVista Offroad Tech</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Weber Conversion">
             <a href="./detail-page/weber-conversion.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -273,6 +309,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. LiftedSubarus does not warrant the performance, effectiveness or applicability of any sites listed or linked to in any Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
+
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
